--- a/client/src/components/home-stories/home-stories.styles.scss
+++ b/client/src/components/home-stories/home-stories.styles.scss
@@ -3,7 +3,6 @@
 .stories-container {
   grid-column: span 3;
   color: white;
-  height: 550px;
   padding: 0;
   text-align: center;
   display: flex;
@@ -19,6 +18,7 @@
   background-position-x: 50%;
   background-position-y: center;
   background-size: cover;
+  min-height: 500px;
 
   img {
     height: auto;
@@ -97,7 +97,6 @@
 @media screen and (min-width: 767px) {
   .stories-container {
     flex-direction: row;
-    height: 60vh;
   }
   .story {
     h1 {
