--- a/client/src/pages/home/home.styles.scss
+++ b/client/src/pages/home/home.styles.scss
@@ -1,31 +1,3 @@
-/*====================== Landing Section ======================*/
-.landing {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: table;
-  z-index: -1;
-}
-.home-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-.home-inner {
-  background-image: url("./blackpool_tower_darker_resize.png");
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  will-change: transform;
-}
-
 header {
   background-image: url("./blackpool_tower_darker_resize.png");
   width: 100%;
@@ -93,44 +65,6 @@ header {
   }
 }
 
-@media screen and (min-width: 767px) {
-  /* Landing Section - Caption */
-  .caption {
-    width: 100%;
-    max-width: 100%;
-    position: absolute;
-    top: 30%;
-    z-index: 1;
-
-    h1 {
-      font-size: 4.5rem;
-      letter-spacing: 0.3rem;
-      text-shadow: 0.1rem 0.1rem 0.8rem black;
-      padding-bottom: 1rem;
-    }
-    h3 {
-      font-size: 2.5rem;
-      text-shadow: 0.1rem 0.1rem 0.8rem black;
-      padding-bottom: 2rem;
-    }
-    .btn-lg {
-      border-width: medium;
-      padding: 0.8rem 1.5rem;
-      font-size: 1.1rem;
-    }
-  }
-
-  header {
-    .header-text {
-      .header-text-items {
-        .button {
-          width: 30%;
-        }
-      }
-    }
-  }
-}
-
 /* card */
 
 .band {
@@ -185,6 +119,44 @@ header {
       font-size: 20px;
       margin: 0;
       color: #333;
+    }
+  }
+}
+
+@media screen and (min-width: 767px) {
+  /* Landing Section - Caption */
+  .caption {
+    width: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 30%;
+    z-index: 1;
+
+    h1 {
+      font-size: 4.5rem;
+      letter-spacing: 0.3rem;
+      text-shadow: 0.1rem 0.1rem 0.8rem black;
+      padding-bottom: 1rem;
+    }
+    h3 {
+      font-size: 2.5rem;
+      text-shadow: 0.1rem 0.1rem 0.8rem black;
+      padding-bottom: 2rem;
+    }
+    .btn-lg {
+      border-width: medium;
+      padding: 0.8rem 1.5rem;
+      font-size: 1.1rem;
+    }
+  }
+
+  header {
+    .header-text {
+      .header-text-items {
+        .button {
+          width: 30%;
+        }
+      }
     }
   }
 }
